# ChangeLog for dev-libs/glib
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/ChangeLog,v 1.578 2013/09/29 10:39:57 pacho Exp $

  29 Sep 2013; Pacho Ramos <pacho@gentoo.org> glib-2.36.4-r1.ebuild:
  Support compilation in clang until upstream solves this, upstream bug #691608
  (#478338 by Yuta SATOH)

  29 Sep 2013; Pacho Ramos <pacho@gentoo.org> -glib-2.36.4.ebuild,
  glib-2.36.4-r1.ebuild:
  Add support for win32 threads model (#472218 by Bertrand Jacquin), drop old.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> glib-2.34.3-r1.ebuild,
  glib-2.36.4-r1.ebuild, glib-2.36.4.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

*glib-2.36.4-r1 (02 Sep 2013)

  02 Sep 2013; Alexandre Rostovtsev <tetromino@gentoo.org> -glib-2.34.3.ebuild,
  -glib-2.36.3-r1.ebuild, -glib-2.36.3-r2.ebuild, +glib-2.36.4-r1.ebuild,
  -files/glib-2.36.3-revert-ext34.patch, +files/glib-2.36.4-znodelete.patch:
  Fix segfaults in vlc and other applications that try to unload libgobject at
  runtime (bug #405173, thanks to Cédric D. for finding a good solution). Drop
  old ebuilds.

  01 Sep 2013; Pacho Ramos <pacho@gentoo.org> glib-2.36.4.ebuild:
  Pass --disable-compile-warnings configure option to drop -Werror usage

  16 Aug 2013; Lars Wendler <polynomial-c@gentoo.org> glib-2.34.3-r1.ebuild:
  Non-maintainer commit: really use python-r1 eclass.

*glib-2.36.4 (16 Aug 2013)

  16 Aug 2013; Alexandre Rostovtsev <tetromino@gentoo.org> -glib-2.36.3.ebuild,
  +glib-2.36.4.ebuild:
  Version bump, remove old. Includes the ext4 patch from 2.36.3-r2.

*glib-2.34.3-r1 (15 Aug 2013)

  15 Aug 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
  +glib-2.34.3-r1.ebuild,
  +files/glib-2.34.3-testsuite-skip-gdbus-auth-tests.patch:
  Update ebuild for python-r1.eclass in preparation for stabilization. Skip
  another failing test (fixed in 2.36).

  15 Aug 2013; Alexandre Rostovtsev <tetromino@gentoo.org>