@@ -27,13 +27,25 @@ DIST pkg-config-0.28.tar.gz 1931203 SHA256 6b6eb31c6ec4421174578652c7e141fdaae2d
 EBUILD glib-1.2.10-r5.ebuild 1802 SHA256 b8561be2cdbe967604c39b6316bee46016e62131e9858d26fb26d8f1699c2029 SHA512 d2c84ba968f81bc851f53fbf1bad01f62de58f16dc49565e341bf7e9396b5f8870501de2027d5b49c5dcd2a8416dca6f530a34491c63ccb26ab94aeafea442ba WHIRLPOOL 1fd9b784429c287fa5dbb4e20db42dd9e1f67cc03ac60c7d47fb751878ed827f2791a2bd6622d84773a4a4607c190a671cef6a6d9b7a61943bf12b7b0e1d6b45
 EBUILD glib-2.32.4-r1.ebuild 8355 SHA256 2c7bed6e3df8f29a6fc03d3c627ac6ddedb62d5624be324063ef3494186d45f4 SHA512 bee7e53b3ad42e5dcc36f75c9a30b7c7bb6e09803064a953982a07d88852ee414987964abfd1acab27dc8b08946c769dc12f8167cbcbf934cc9b66e009286793 WHIRLPOOL cd9bd78ae8d8ed4cb0fbeadc7d1a91937ed056d68b90e4a321412c812ba27edca6c753a87b3fbe8a4d75d4ddd88e66fa8312ca16d88843242ad0365287a6aed6
 EBUILD glib-2.34.3-r1.ebuild 8404 SHA256 42e08114a3a195268c2fd9cc547b658f65b7e813aaff2ecc4fe15e1ce54a987e SHA512 2cf6a63766bb95c315a66716f9d786565c52f56129aeaef5381f0306e7eb0b33f3cd5417cca1eaef0c6fb1451740770d5ab49d2f22619fa17abb20ea838a2eb0 WHIRLPOOL f623382d38b455fc6a8284e199a4c99f6baa7c41e3a4593d308419676847550ce25345766e238a39025d56aaac0d6b7efdeaa82d9de25dbb7b446a15bb444c84
-EBUILD glib-2.36.4-r1.ebuild 9740 SHA256 70994dee564b950b50968326cf1e8551e3aaf9f2d06c491842566fa5265daec5 SHA512 2c6c72cfad0e70eee6e54e1609725af560144b9b49720bd53a817fc7971e7e3a8468f36e225219c8cd53e6624ff2260eabd97b0f0728fe5e557b762057d366c2 WHIRLPOOL 6bb1387d4f4bb05650f3e96d4ce0685b6d0f0db98442da632478a091c3127947ecd762dd57f165e35b0b822564428f261e6fcc3d1280733a1f4ef8ef98717795
-MISC ChangeLog 81418 SHA256 9161f1b92a0d08e4505ec0330b9cd05f6c85272660b07b4228398a111c9bc2eb SHA512 84d0820af5411eb0fcc011c1f22b3dcb71c851d36d61e2ebd5059928a4241754210531872656a1263123fa70714b31f32eeca452e8dbda455d3fa2781c1d9580 WHIRLPOOL e925d35079270472e6c80e46ad1652b8b9841ed67b1cf3aed45da50e972c9f70c92078afc00c80f37fedd3ccdb579f863b4c7aee744b423d7ac9417e4df3a751
+EBUILD glib-2.36.4-r1.ebuild 9756 SHA256 21f66a4ad8976de657f83c970f4b9bd5ef83207f3bb528faa8d5220215d5a8ad SHA512 a1da2c18667c1f995417b50c0d39dda4a3e2d0de113ed9331ef7283d579cfd229183a12d826b88b6d35bb8821bf7badea8149875aa7321982944c7774e07466b WHIRLPOOL c33d291b78ee56736d6f857992654bdd30c15c439ffcfdfee4ab940b7fb709dff12cff630e0c835865e7a0d8888580a57678da65baf5c012e00237b6cc4942ba
+MISC ChangeLog 81583 SHA256 6485a34278492fb90049d202c223ecc48bca4327a9bde8db8638600ff2df8ef0 SHA512 17a941a1aa85b0de46d88134b47e9dc91b5f78fb3749873ffcb8b581ff7a93d0d1cafdf2a6bcb46f4318399308df202ec95bbbf43710cc4c45a24c804e94a275 WHIRLPOOL d458f94d1dd03577a827f415cf5472689b1105bb838a3da5567dad16e897a2c78f48bc4298cba90f6b09d8a2c69cbecd550a1a50e3a5238feef2ff17fe53094e
 MISC metadata.xml 479 SHA256 1a41cb4f56511674a423efd444f7c6999b5d316f9058d2eb67a032a522738ffb SHA512 f30f9e937d43dd4fb148dc7ab1554b5c58ddf4211bc06cfc65e92ff9843a84f0b05fa130fcd130744ad6e3579fb5b82a7f31950dd8ccc317f58388023cb6fe50 WHIRLPOOL 92888cd8e3a839860cb20c60ad1ee2871ea9efdf54d5751d6b5f677faf10e721333c3d68b1b5c4af212854f9ecd9e31970832eaa05f30276987bcadacaf5f637
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlJIA34ACgkQCaWpQKGI+9RxqgCggYnmyhwMewOZkEVEKI3OUd0E
-ziYAn2hFUG0WxUvRY1+klXb7mWQdAkhT
-=c9sE
+iQJ8BAEBCABmBQJSWv/KXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOh2oP+gIOF80wBJPxxJPn+nWXyL/E
+o4qEc5BbnQ2KcT1Z1VJHifDnA4yUXExUCQQED6+LD5NYXF2KwmEDiVQ4CJh6xIDh
+Y38J90AJtkb6tAgH4Qzp2u0IRSHFgP6ddoeaEqfxemPfTlDEmCbfLCW2NVHLcsnx
+VIk6MtpdecZSv/WNWuvvQjlNFscHwmQ8JhYOP6wfDz/zGkn6n2P93ScMXPF2fQSk
+JgEIY1GDSvE6YYXLYmfX06QqmNsKtkJrr/f8PhU+TPXTNAzwTVyx5ZiteGYmMooj
+3p/CKjOpS06o5n5nPfJBw52E+t0f5wcgQOlee08WOTgcTnDwFGMNlMk+qAvCSDXd
+l4cBqS88zNsGtwh0VPGCac20v+f8Pii8F9kXivCiFRbqG6GgR8XvRin/LDTHeZKS
+ZLIUzzzSZUlH+X6rRNAdqzMTkP8Y6Ln/qNw2ZXdMtouuuXbqNoxU/p8N36AB9tJP
+gOlqS1d3nC9s4dQ2xssFLOR4PGpb/4mtofHVNBI61Isfmdn9rJ6SmY+iiB+oKrqh
+ey2s/RxE3aKgycohrKlV16GUiiYGZj7mZG8aymDLwpZ+8AYxDN2GD91ake+8d69V
+w4MwN7zKVgn36V7bGmOh4gMPeIVoefeHbawHFLPdGWlil+anBFLQlDKfKQxf77MC
+wJY0YIHNMeI0eBcNxvUM
+=WIse
 -----END PGP SIGNATURE-----
