@@ -3,12 +3,12 @@ DEPEND=>=sys-apps/dbus-1.6.8-r1 >=sys-apps/util-linux-2.20 sys-libs/libcap acl? 
 DESCRIPTION=System and service manager for Linux
 EAPI=5
 HOMEPAGE=http://www.freedesktop.org/wiki/Software/systemd
-IUSE=acl audit cryptsetup doc +firmware-loader gcrypt gudev http introspection +kmod lzma openrc pam policykit python qrcode selinux tcpd test vanilla xattr +filecaps abi_x86_32 abi_x86_64 abi_x86_x32 abi_mips_n32 abi_mips_n64 abi_mips_o32 python_targets_python2_7 python_single_target_python2_7
+IUSE=acl audit cryptsetup doc +firmware-loader gcrypt gudev http introspection +kmod lzma pam policykit python qrcode selinux tcpd test vanilla xattr +filecaps abi_x86_32 abi_x86_64 abi_x86_x32 abi_mips_n32 abi_mips_n64 abi_mips_o32 python_targets_python2_7 python_single_target_python2_7
 KEYWORDS=~amd64 ~arm ~ppc ~ppc64 ~x86
 LICENSE=GPL-2 LGPL-2.1 MIT public-domain
 PDEPEND=>=sys-apps/hwids-20130717-r1[udev] policykit? ( sys-auth/polkit ) !vanilla? ( sys-apps/gentoo-systemd-integration )
-RDEPEND=>=sys-apps/dbus-1.6.8-r1 >=sys-apps/util-linux-2.20 sys-libs/libcap acl? ( sys-apps/acl ) audit? ( >=sys-process/audit-2 ) cryptsetup? ( >=sys-fs/cryptsetup-1.6 ) gcrypt? ( >=dev-libs/libgcrypt-1.4.5 ) gudev? ( >=dev-libs/glib-2[abi_x86_32(-)?,abi_x86_64(-)?,abi_x86_x32(-)?,abi_mips_n32(-)?,abi_mips_n64(-)?,abi_mips_o32(-)?] ) http? ( net-libs/libmicrohttpd ) introspection? ( >=dev-libs/gobject-introspection-1.31.1 ) kmod? ( >=sys-apps/kmod-14-r1 ) lzma? ( app-arch/xz-utils[abi_x86_32(-)?,abi_x86_64(-)?,abi_x86_x32(-)?,abi_mips_n32(-)?,abi_mips_n64(-)?,abi_mips_o32(-)?] ) pam? ( virtual/pam ) python? ( python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-python/python-exec:=[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] ) qrcode? ( media-gfx/qrencode ) selinux? ( sys-libs/libselinux ) tcpd? ( sys-apps/tcp-wrappers ) xattr? ( sys-apps/attr ) abi_x86_32? ( !<=app-emulation/emul-linux-x86-baselibs-20130224-r9 !app-emulation/emul-linux-x86-baselibs[-abi_x86_32(-)] ) >=sys-apps/baselayout-2.2 openrc? ( >=sys-fs/udev-init-scripts-25 ) || ( >=sys-apps/util-linux-2.22 <sys-apps/sysvinit-2.88-r4 ) !sys-auth/nss-myhostname !<sys-libs/glibc-2.10 !sys-fs/udev
+RDEPEND=>=sys-apps/dbus-1.6.8-r1 >=sys-apps/util-linux-2.20 sys-libs/libcap acl? ( sys-apps/acl ) audit? ( >=sys-process/audit-2 ) cryptsetup? ( >=sys-fs/cryptsetup-1.6 ) gcrypt? ( >=dev-libs/libgcrypt-1.4.5 ) gudev? ( >=dev-libs/glib-2[abi_x86_32(-)?,abi_x86_64(-)?,abi_x86_x32(-)?,abi_mips_n32(-)?,abi_mips_n64(-)?,abi_mips_o32(-)?] ) http? ( net-libs/libmicrohttpd ) introspection? ( >=dev-libs/gobject-introspection-1.31.1 ) kmod? ( >=sys-apps/kmod-14-r1 ) lzma? ( app-arch/xz-utils[abi_x86_32(-)?,abi_x86_64(-)?,abi_x86_x32(-)?,abi_mips_n32(-)?,abi_mips_n64(-)?,abi_mips_o32(-)?] ) pam? ( virtual/pam ) python? ( python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-python/python-exec:=[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] ) qrcode? ( media-gfx/qrencode ) selinux? ( sys-libs/libselinux ) tcpd? ( sys-apps/tcp-wrappers ) xattr? ( sys-apps/attr ) abi_x86_32? ( !<=app-emulation/emul-linux-x86-baselibs-20130224-r9 !app-emulation/emul-linux-x86-baselibs[-abi_x86_32(-)] ) >=sys-apps/baselayout-2.2 >=sys-fs/udev-init-scripts-25 || ( >=sys-apps/util-linux-2.22 <sys-apps/sysvinit-2.88-r4 ) !sys-auth/nss-myhostname !<sys-libs/glibc-2.10 !sys-fs/udev
 SLOT=0/1
 SRC_URI=http://www.freedesktop.org/software/systemd/systemd-208.tar.xz -> systemd-208-r1.tar.xz http://dev.gentoo.org/~mgorny/dist/systemd-gentoo-patchset-208_p19.tar.bz2
 _eclasses_=autotools	16761a2f972abd686713e5967ff3c754	autotools-utils	5f912199ed4fdfb0bfbde29c7ac7dbdb	bash-completion-r1	d339dd40b2014cf1edba8592580eef42	eutils	4878e7f88afc0ba0866ac112190b0fd4	fcaps	832d0c7d930e7df835c19b5d0a5f6f4b	flag-o-matic	08a40a43c401c96d16477c02e56d9a64	libtool	b1c8688e60f9580bcb9bb46e08737eb1	linux-info	a9cbd6bbe2b28166e403321882f3c73c	multibuild	56d4120419072116417e8de1bd1040ff	multilib	892e597faee02a5b94eb02ab512e7622	multilib-build	0bf1bbb0a7a26fc4daf3e660ef004ee5	multilib-minimal	09c985fcba99d0f16fc7161fffa80730	multiprocessing	89580da5ec17ad687fcde876c542b91e	pam	5c1a9ef4892062f9ec25c8ef7c1f1e52	python-single-r1	fa36040985cb5e3cdd31d44be94d15bc	python-utils-r1	4f3595fa07cbecf9f3cfabd0f9a6f34b	systemd	e80fe2d5b43ec0f0160c6e8ef931fa4c	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	udev	a9a8d051efb42bfe884c1db82ce161de	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
-_md5_=c9f49608a2cbf5f582e6f9f74af504f0
+_md5_=85390cd118ded3831684d416db5d8b84
