@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/systemd
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/systemd/ChangeLog,v 1.190 2013/10/08 21:45:07 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/systemd/ChangeLog,v 1.191 2013/10/13 20:15:19 floppym Exp $
+
+  13 Oct 2013; Mike Gilbert <floppym@gentoo.org> systemd-208-r2.ebuild,
+  systemd-9999.ebuild:
+  Depend on udev-init-scripts unconditionally, bug 487080.
 
 *systemd-208-r2 (08 Oct 2013)
 
